# DE-zoomcamp_2026

./: README.md  pyproject.toml
module1-docker-sql/: homework_1.md  ingest_data.py  notebook.ipynb  parquet_ingestion.ipynb
module2-orchestration/: homework_2.md
module3-data-warehouse/: homework_3.md
module4-analytics-engineering/: homework_4.md
module5-data-platforms/: homework_5.md
module6-batch/: homework6.md
workshop/: homework.md  readme.md
workshop/taxi-pipeline/: taxi_pipeline.py  taxi_pipeline_pipeline.py
