[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "requests>=2.31.0",
    "pandas>=2.3.3",
    "numpy>=1.26.4",
    "pendulum>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "clickhouse-driver>=0.2.6",
    "clickhouse-sqlalchemy>=0.2.5",
    "apache-airflow-providers-postgres>=5.14.0",
    "apache-airflow-providers-http>=4.9.0",
    "apache-airflow-providers-ssh>=3.10.1"
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.3.0",
]
